2006-10-24  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b24)

	* Added Norwegian translation (thanks Sverre M. Vikan)

2006-10-23  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b23)

	* Re-enabled QuickConfig preference dialog (this was a very
	  long-standing issue, thanks Neil for bringing it to
	  my attention).

2006-10-21  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b22)

	* Added warning dialog when quitting if some pictures haven't
	  been uploaded.
	* Added guidelines during crop (can be disabled by setting
	  previewDrawThirds=false in the user's properties).

2006-10-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b21)

	* The preview window is now tied to the main window: when
	  the user raises the one, the other comes with.

2006-10-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b20)

	* Final (?) solution to the problem of self-signed SSL
	  certificates. Thanks a bunch to cfreeze!
	* mindless fixed the URL to the GR FAQ.

2006-07-26  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b19)

	* Rewrote most of the slideshow, adding double-buffering
	  and transitions for all versions of Java, without
	  flickering. Also finally cleaned up all threading
	  problems.
	* Removed support for transitions for previews.
	* Fixed error where clicking on the blue link
	  for the GR FAQ in applets would fail.
	* Added a framework for testing the slideshow code more
	  conveniently.
	* Added support for filtering the log: the GR_LOG_MODULES
	  environment varible can be set to a comma-delimited list
	  of modules; only those modules will appear in the log.

2006-07-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b18)

	* Added smooth transition effects in slideshow. For this to
	  be enabled, the slideshowTransitionDuration property needs
	  to be set to a number of milliseconds for the transition.
	  Also, it works much better on Java 1.6 beta, because the new
	  version enables OpenGL for Java 2D operations.

2006-06-07  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b17)