@@ -8,6 +8,7 @@ import com.gallery.GalleryRemote.prefs.PreferenceNames;
 
 import javax.swing.*;
 import java.awt.*;
+import java.awt.image.BufferedImage;
 import java.awt.geom.Rectangle2D;
 import java.util.*;
 import java.util.regex.Matcher;
@@ -17,8 +18,8 @@ import java.io.File;
 public class ImageLoaderUtil implements PreferenceNames {
 	public static final String MODULE = "ImgLoadrUtil";
 
-	public SmartHashtable imageIcons = new SmartHashtable();
-	public ImageIcon imageShowNow = null;
+	public SmartHashtable images = new SmartHashtable();
+	public BufferedImage imageShowNow = null;
 	public Picture pictureShowWant = null;
 	public Picture pictureShowNow = null;
 	public ImageLoader imageLoader = new ImageLoader();
@@ -43,7 +44,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 	}
 
 	public void flushMemory() {
-		imageIcons.clear();
+		images.clear();
 		if (pictureShowNow != null) {
 			pictureShowWant = null;
 			imageShowNow = null;
@@ -52,7 +53,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 		}
 	}
 
-	public void pictureReady(ImageIcon image, Picture picture) {
+	public void pictureReady(BufferedImage image, Picture picture) {
 		if (!imageLoaderUser.blockPictureReady(image, picture)) {
 			imageShowNow = image;
 			pictureShowNow = picture;
@@ -73,7 +74,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 			if (picture != pictureShowWant) {
 				pictureShowWant = picture;
 
-				ImageIcon r = (ImageIcon) imageIcons.get(picture);
+				BufferedImage r = (BufferedImage) images.get(picture);
 				if (r != null) {
 					Log.log(Log.LEVEL_TRACE, MODULE, "Cache hit: " + picture);
 					if (notify) {
@@ -84,7 +85,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 					if (async) {
 						imageLoader.loadPicture(picture, true);
 					} else {
-						ImageIcon sizedIcon = getSizedIconForce(picture);
+						BufferedImage sizedIcon = getSizedIconForce(picture);
 						if (sizedIcon != null) {
 							if (notify) {
 								pictureReady(sizedIcon, picture);
@@ -96,8 +97,8 @@ public class ImageLoaderUtil implements PreferenceNames {
 		}
 	}
 
-	public ImageIcon getSizedIconForce(Picture picture) {
-		ImageIcon r = (ImageIcon) imageIcons.get(picture);
+	public BufferedImage getSizedIconForce(Picture picture) {
+		BufferedImage r = (BufferedImage) images.get(picture);
 
 		if (r == null) {
 			synchronized(picture) {
@@ -130,7 +131,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 				}
 
 				Log.log(Log.LEVEL_TRACE, MODULE, "Adding to cache: " + picture);
-				imageIcons.put(picture, r);
+				images.put(picture, r);
 			}
 		}
 
@@ -313,7 +314,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 		public void run() {
 			Log.log(Log.LEVEL_TRACE, MODULE, "Starting " + picture);
 			Picture tmpPicture = null;
-			ImageIcon tmpImage = null;
+			BufferedImage tmpImage = null;
 			while (picture != null) {
 				synchronized (picture) {
 					tmpPicture = picture;
@@ -431,9 +432,9 @@ public class ImageLoaderUtil implements PreferenceNames {
 			Object key = touchOrder.get(0);
 			touchOrder.remove(0);
 
-			ImageIcon i = (ImageIcon) get(key, false);
+			Image i = (Image) get(key, false);
 			if (i != null) {
-				i.getImage().flush();
+				i.flush();
 			}
 
 			remove(key);
@@ -446,7 +447,7 @@ public class ImageLoaderUtil implements PreferenceNames {
 
 	public interface ImageLoaderUser {
 		public void pictureReady();
-		public boolean blockPictureReady(ImageIcon image, Picture picture);
+		public boolean blockPictureReady(BufferedImage image, Picture picture);
 		public Dimension getImageSize();
 		public void nullRect();
 		public void pictureStartDownloading(Picture picture);
